--- a/documentation/f0d.html
+++ b/documentation/f0d.html
@@ -20,10 +20,15 @@
 	</header>
 
     <div class="container">
+		<div class="side"></div>
 		<div class="title">Les failles 0d</div>
+		<div class="side"></div>
 		<br>
 		<br>
+		<div class="side"></div>
 		<div class="subtitle"><strong><u>Sommaire</u></strong></div>
+		<div class="side"></div>
+		<div class="side"></div>
 		<div class="">
 			<a href="#1">Définition de zero-day</a><br>
 			<a href="#2">Que sont les attaques zero-day et comment fonctionnent-elles ?</a><br>
@@ -33,6 +38,7 @@
 			<a href="#6">Exemples d’attaques zero-day</a><br>
 			<a href="#7">Comment vous protéger contre les attaques zero-day</a><br>
 		</div>
+		<div class="side"></div>
 		<br>
 		<br>
 		<div class="subtitle" id="1">Définition de zero-day</div>
