--- a/credits.html
+++ b/credits.html
@@ -61,7 +61,7 @@
         <div class ="card">
             <div class ="content"> 
                 <h3>Sources</h3>
-                <p>Youtube: Online Tutorials</p>
+                <p>Cliquez pour voir</p>
                 <button href="#" id="sources">Voir Plus</button>
             </div>
         </div>
