--- a/documentation.html
+++ b/documentation.html
@@ -53,7 +53,7 @@
 				<span></span>
 				<div class = "content">
 					<h2>Les Faille 0d</h2>
-					<p2>La dangerosité de Pegasus!</p2>
+					<p2>Que sont les attaques zero-day et comment fonctionnent-elles ?</p2>
 				</br>
 					<a href="documentation/f0d.html">Lire plus</a>
 				</div>
@@ -62,9 +62,9 @@
 				<span></span>
 				<div class = "content">
 					<h2>Le Dark Web</h2>
-					<p2>Comment marche le peer to peer, un réseau décentralisé.</p2>
+					<p2>Preventions et informations consernant le dark web</p2>
 				</br>
-					<a href="documentation/dw.html">Lire plus</a>
+					<a href="documentation/dark web.html">Lire plus</a>
 				</div>
 			</div>
 
