--- a/documentation/f0d.html
+++ b/documentation/f0d.html
@@ -23,20 +23,19 @@
 		<div class="side"></div>
 		<div class="title">Les failles 0d</div>
 		<div class="side"></div>
-		<br>
-		<br>
-		<div class="side"></div>
-		<div class="subtitle"><strong><u>Sommaire</u></strong></div>
-		<div class="side"></div>
 
-		<div class="">
-			<a href="#1">Définition de zero-day</a><br>
-			<a href="#2">Que sont les attaques zero-day et comment fonctionnent-elles ?</a><br>
-			<a href="#3">Qui lance des attaques zero-day ?</a><br>
-			<a href="#4">Qui les failles d’exploitation zero-day ciblent-elles ?</a><br>
-			<a href="#5">Comment identifier des attaques zero-day</a><br>
-			<a href="#6">Exemples d’attaques zero-day</a><br>
-			<a href="#7">Comment vous protéger contre les attaques zero-day</a><br>
+		<div class="summary">
+			<div class="summary-title">
+				<strong><u>Sommaire</u></strong>
+			</div>
+
+			<div href="#1" class="summary-item"><li>Définition de zero-day</li></div><br>
+			<div href="#2" class="summary-item"><li>Que sont les attaques zero-day et comment fonctionnent-elles ?</li></div><br>
+			<div href="#3" class="summary-item"><li>Qui lance des attaques zero-day ?</li></div><br>
+			<div href="#4" class="summary-item"><li>Qui les failles d’exploitation zero-day ciblent-elles ?</li></div><br>
+			<div href="#5" class="summary-item"><li>Comment identifier des attaques zero-day</li></div><br>
+			<div href="#6" class="summary-item"><li>Exemples d’attaques zero-day</li></div><br>
+			<div href="#7" class="summary-item"><li>Comment vous protéger contre les attaques zero-day</li></div><br>
 		</div>
 		<div class="side"></div>
 		<br>
