--- a/documentation/crypto.html
+++ b/documentation/crypto.html
@@ -101,6 +101,12 @@
 			les mineurs étaient les seuls à apporter de la masse monétaire tout comme les mineurs de bitcoin.
 			<br>
 		</div>
+		<div class="box" style="width: 580px; height: 320px; padding-top: 12px; font-size: 20px">
+			Vidéo explicative sur ce sujet:
+			<br>
+			<br>
+			<iframe width="560" height="315" style="border-radius: 15px;" src="https://www.youtube.com/embed/du34gPopY5Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
     </div>
 
 
