--- a/credits.html
+++ b/credits.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="css/style_credits.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="js/transition.js"></script>
-<link rel="icon"  type="image/png"  href="../favicon.png">
 <link rel="icon"  type="image/png"  href="favicon.png">
 </head>
 
@@ -16,7 +15,8 @@
 
     <header class="header">
 		<img class="header-title" src="resources/images/logo/logo-black-bold-bg.png" width="30" style="border-radius: 15px">
-		<p class="header-title">WallHack - Credits</header>
+		<p class="header-title">WallHack - Credits
+    </header>
 
     <nav class="navbar">
 		<ul class="navbar-menu">
@@ -82,6 +82,8 @@
             <p>Popup modals: <a href="https://www.w3schools.com/howto/howto_css_modals.asp">w3schools.com</a></p>
             <p>Navbar: <a href="https://youtu.be/0IDsPpVLgxI">youtube.com: Wawa Sensei</a></p>
             <p>Page transition: <a href="https://youtu.be/ckJ7gdIeebc">youtube.com: Tyler Potts</a></p>
+            <p>Bonneteau: <a href="https://youtu.be/ihYVnDaaQag">youtube.com: Graven</a></p>
+            <p> Audio dans les credits <a href="https://www.1formatik.com/6849/comment-creer-un-bouton-audio-lecture-et-pause-en-html"> 1formatik.com </a> </p>
             <p>Et pleins d'autre trucs: <a href="https://www.youtube.com/c/OnlineTutorials4Designers">youtube.com: Online Tutorials</a></p>
         </div>
     </div>
@@ -96,6 +98,18 @@
         <div class="popup-divider"></div>
         <div class="popup-content">
           <p>Et le projet et bien evidemment <strong>Walydé</strong> par Quentin !</p>
+        </div>
+    </div>
+    <div class="popup-bg" id="cmd-popupBg"></div>
+    <div class="popup" id="cmd-popup">
+        <div class="popup-header">
+            <h3 align="center">CMD</h3>
+            <i class="fas fa-times close" id="cmd-close"></i>
+        </div>
+        <div class="popup-divider"></div>
+        <div class="popup-content" id="cmd-popup-content">
+            <input type="text" id="cmd-input" placeholder="Type here..."></input>
+            <button class="cmd-submit">Submit</button>
         </div>
     </div>
 
