--- a/documentation/owasp.html
+++ b/documentation/owasp.html
@@ -161,7 +161,7 @@
 	<button id="sources">Voir Plus</button>
 
     <footer class="footer">
-		<p>Copyright © WallHack</p>
+		<p>Tom et Cedric 16/01/2022  Copyright © WallHack</p>
 	</footer>
 
 	
