--- a/credits.html
+++ b/credits.html
@@ -114,7 +114,7 @@
     </div>
 
     <footer class="footer">
-		<p>Copyright © WallHack</p>
+		<p>Tom et Cedric 16/01/2022  Copyright © WallHack</p>
 	</footer>
     <audio src="resources/musics/readmore.weba"></audio>
 
