--- a/credits.html
+++ b/credits.html
@@ -109,7 +109,7 @@
         <div class="popup-divider"></div>
         <div class="popup-content" id="cmd-popup-content">
             <input type="text" id="cmd-input" placeholder="Type here..."></input>
-            <div class="result"></div>
+            <div class="result" style="margin-bottom: 1rem"></div>
             <button class="cmd-submit">Submit</button>
         </div>
     </div>
