--- a/documentation/network.html
+++ b/documentation/network.html
@@ -89,6 +89,8 @@
 <br>
 		<div class="side"></div>
 		<div class ="subtitle">Connexions réseau physique</div>
+		<div class="side"></div>
+
 		<div class ="text">
 			Câblage UTP <br>
 			Câbles à fibre optique <br>
@@ -98,6 +100,7 @@
 <br>
 		<div class="side"></div>
 		<div class ="subtitle">Normes du réseau</div>
+		<div class="side"></div>
 		<div class ="text">
 			Organismes de normalisation <br>
 			Processus d’élaboration des normes en exemple <br>
@@ -108,6 +111,7 @@
 <br>
 		<div class="side"></div>
 		<div class ="subtitle">Réseaux locaux (LAN) Ethernet</div>
+		<div class="side"></div>
 		<div class ="text">
 			Adresses NIC et MAC <br>
 			Normes Ethernet <br>
@@ -120,6 +124,7 @@
 <br>
 		<div class="side"></div>
 		<div class ="subtitle">Commutation Ethernet</div>
+		<div class="side"></div>
 		<div class ="text">
 			Avantages de la commutation <br>
 			Aperçu des opérations du commutateur <br>
@@ -132,6 +137,7 @@
 <br>
 		<div class="side"></div>
 		<div class ="subtitle">LAN sans fil (WLAN)</div>
+		<div class="side"></div>
 		<div class ="text">
 			Normes WLAN (réseau local sans fil) : IEEE et Wi-Fi Alliance <br>
 			Composants du WLAN<br>
@@ -145,6 +151,7 @@
 <br>
 		<div class="side"></div>
 		<div class ="subtitle">Adressage IP</div>
+		<div class="side"></div>
 		<div class ="text">
 			Quelles sont les adresses logiques ? <br>
 			Numérotation binaire <br>
@@ -158,10 +165,14 @@
 			Adressage sans classe <br>
 			Introduction à IPv6<br>
 		</div>
+		<div class="side"></div>
+
 <br>
 <br>
 		<div class="siide"></div>
 		<div class ="subtitle">#</div>
+		<div class="side"></div>
+
 		<div class ="text">
 			#
 		</div>
