--- a/documentation/network.html
+++ b/documentation/network.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>WallHack - Template</title>
+	<title>WallHack - Network</title>
 	<link rel="stylesheet" type="text/css" href="../css/documentations.css" />
 	<script src="https://kit.fontawesome.com/275ad3a481.js" crossorigin="anonymous"></script>
 	<script src="../js/transition.js"></script>
@@ -17,7 +17,7 @@
 
     <header class="header">
 		<img class="header-title" src="../resources/images/logo/logo-black-bold-bg.png" width="30" style="border-radius: 15px">
-		<p class="header-title">WallHack - Template</p>
+		<p class="header-title">WallHack - Network</p>
 	</header>
 
     <nav class="navbar">
@@ -170,12 +170,144 @@
 <br>
 <br>
 		<div class="siide"></div>
-		<div class ="subtitle">#</div>
+		<div class ="subtitle">Sous-réseaux IPv4</div>
 		<div class="side"></div>
 
 		<div class ="text">
-			#
+			Objectif des sous-réseaux <br>
+			Communications du sous-réseau <br>
+			Règles de masquage du sous-réseau <br>
+			L’art de la création de sous-réseaux <br>
+			La science de la création de sous-réseaux <br>
+			Calcul des sous-réseaux <br>
+			Quatre adresses principales <br>
+			Étude de cas de sous-réseaux <br>
+			Masquage du sous-réseau de longueur variable <br>
 		</div>
+		<div class="side"></div>
+
+<br>
+<br>
+		<div class="siide"></div>
+		<div class ="subtitle">TCP et UDP</div>
+		<div class="side"></div>
+
+		<div class ="text">
+			En-têtes TCP et UDP <br>
+			Communications axées sur la connexion vs communication sans connexion <br>
+			Protocole de contrôle de la transmission <br>
+			Protocole de datagramme utilisateur <br>
+			Numéros de port TCP et UDP <br>
+			Traduction de l’adresse réseau <br>
+		</div>
+		<div class="side"></div>
+
+<br>
+<br>
+		<div class="siide"></div>
+		<div class ="subtitle">Protocoles de gestion et de soutien</div>
+		<div class="side"></div>
+
+		<div class ="text">
+			Protocole de résolution d’adresse<br>
+			Protocole de configuration dynamique d’hôte<br>
+			Système de nom de domaine (DNS)<br>
+			ICMP (Internet Control Message Protocol)<br>
+			Internet<br>
+			Group Management Protocol (IGMP)<br>
+			Telnet<br>
+			SNMP (Simple Network Management Protocol)<br>
+			Protocoles Legacy : NetBIOS et NetBEUI<br>
+		</div>
+		<div class="side"></div>
+
+<br>
+<br>
+		<div class="siide"></div>
+		<div class ="subtitle">Routage</div>
+		<div class="side"></div>
+
+		<div class ="text">
+			Aperçu du routage<br>
+			Segmentation logique<br>
+			Routage dynamique et statique<br>
+			Processus de décision de routage<br>
+			Protocole de routage<br>
+			Protocoles de routage<br>
+			Configuration des routeurs<br>
+		</div>
+		<div class="side"></div>
+
+<br>
+<br>
+		<div class="siide"></div>
+		<div class ="subtitle">Réseaux étendus (WAN)</div>
+		<div class="side"></div>
+
+		<div class ="text">
+			Évolution des technologies WAN <br>
+			Sources des solutions WAN<br>
+			Commutation de circuits vs commutation de paquets<br>
+			Solutions WAN à commutation de circuit<br>
+			Solutions WAN à commutation de paquets<br>
+			WAN Internet<br>	
+		</div>
+		<div class="side"></div>
+<br>
+<br>
+		<div class="siide"></div>
+		<div class ="subtitle">Protocoles de communications</div>
+		<div class="side"></div>
+
+		<div class ="text">
+			Courrier électronique<br>
+			Messagerie instantanée<br>
+			Voice Over IP<br>
+			Communications unifiées<br>
+		</div>
+		<div class="side"></div>
+<br>
+<br>
+		<div class="siide"></div>
+		<div class ="subtitle">Protocoles Web</div>
+		<div class="side"></div>
+
+		<div class ="text">
+			Hypertext Transfer (HTTP)<br>
+			Secure Sockets Layer (SSL)<br>
+			Transport Layer Security (TLS)<br>
+			Remote Desktop Protocols<br>
+			File Transfer Protocol (FTP)<br>
+		</div>
+		<div class="side"></div>
+
+<br>
+<br>
+		<div class="siide"></div>
+		<div class ="subtitle">Sécurité du réseau</div>
+		<div class="side"></div>
+
+		<div class ="text">
+			Menaces de sécurité<br>
+			Atténuation des menaces<br>
+			Élaboration d’un plan de sécurité<br>
+		</div>
+		<div class="side"></div>
+<br>
+<br>
+		<div class="siide"></div>
+		<div class ="subtitle">Nouvelles technologies de gestion de réseau</div>
+		<div class="side"></div>
+
+		<div class ="text">
+			Amélioration des technologies sans fil<br>
+			Mobilité de l’entreprise<br>
+			Internet des objets<br>
+			Réseaux par logiciel<br>
+			Rester à jour de la nouvelle technologie<br>
+		</div>
+		<div class="side"></div>
+
 
     </div>
 
