--- a/credits.html
+++ b/credits.html
@@ -89,6 +89,20 @@
     </div>
 
 
+    <div class="popup-bg" id="tidic-popupBg"></div>
+    <div class="popup" id="tidic-popup">
+        <div class="popup-header">
+            <h3 align="center">Auteurs</h3>
+            <i class="fas fa-times close" id="tidic-close"></i>
+        </div>
+        <div class="popup-divider"></div>
+        <div class="popup-content">
+            <button onclick="document.location.href = 'https://paypal.me/tidic89'" class="paypal">Tidic</button>
+            <button onclick="document.location.href = 'https://paypal.me/Moietpastoii'"  class="paypal">Youko</button>
+        </div>
+    </div>
+
+
     <div class="popup-bg" id="youko-popupBg"></div>
     <div class="popup" id="youko-popup">
         <div class="popup-header">
