--- a/credits.html
+++ b/credits.html
@@ -97,7 +97,7 @@
         </div>
         <div class="popup-divider"></div>
         <div class="popup-content">
-          <p>Et le projet et bien evidemment <strong>Walydé</strong> par Quentin !</p>
+          <p>Et le projet est bien evidemment <strong>Walydé</strong> par Quentin !</p>
         </div>
     </div>
     <div class="popup-bg" id="cmd-popupBg"></div>
