encore des détails

--- a/credits.html
+++ b/credits.html
@@ -96,7 +96,7 @@
             <i class="fas fa-times close" id="tidic-close"></i>
         </div>
         <div class="popup-divider"></div>
-        <div class="popup-content">
+        <div class="popup-content" id="tidic-popup-content">
             <button onclick="document.location.href = 'https://paypal.me/tidic89'" class="paypal">Tidic</button>
             <button onclick="document.location.href = 'https://paypal.me/Moietpastoii'"  class="paypal">Youko</button>
         </div>
