--- a/credits.html
+++ b/credits.html
@@ -117,7 +117,7 @@
     <div class="popup-bg" id="cmd-popupBg"></div>
     <div class="popup" id="cmd-popup">
         <div class="popup-header">
-            <h3 align="center">CMD</h3>
+            <h3 align="center">https://www.youtube.com/watch?v=GA94F_O6U1o</h3>
             <i class="fas fa-times close" id="cmd-close"></i>
         </div>
         <div class="popup-divider"></div>
