--- a/documentation/dark web.html
+++ b/documentation/dark web.html
@@ -102,8 +102,7 @@
 		</ul>
 	</nav>
 
-	<!-- POPUP -->
-    <div class="popup-bg" id="popupBg"></div>
+	<!-- POPUP     <div class="popup-bg" id="popupBg"></div>
     <div class="popup" id="popup">
         <div class="popup-header">
             <h3 align="center">Sources</h3>
@@ -121,6 +120,8 @@
         </div>
     </div>
 	<button id="sources">Voir Plus</button>
+	-->
+
 
     <footer class="footer">
 		<p>Tom et Cedric 16/01/2022  Copyright © WallHack</p>
