--- a/documentation/network.html
+++ b/documentation/network.html
@@ -311,8 +311,8 @@
 
     </div>
 
-
-	<!-- POPUP -->
+<!--
+	 POPUP 
     <div class="popup-bg" id="popupBg"></div>
     <div class="popup" id="popup">
         <div class="popup-header">
@@ -331,6 +331,7 @@
         </div>
     </div>
 	<button id="sources">Voir Plus</button>
+	 -->
 
     <footer class="footer">
 		<p>Copyright © WallHack</p>
