--- a/documentation/crypto.html
+++ b/documentation/crypto.html
@@ -65,11 +65,11 @@
 			La blockchain est une base de données qui est hébergée par tous les pairs.
 			<div class="box" style="float: left; width: 280px; height: 280px;">
 				<img src="../resources/images/docs/centralized-network.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
-			<br><p>Réseau centralisé</p>
+			<br><p>Réseau décentralisé</p>
 			</div>
 			<div class="box" style="width: 280px; height: 280px;">
 				<img src="../resources/images/docs/decentralized-network.png" alt="Il y avais une image la :cry:" width="250" height="250"> 
-				<p>Réseau décentralisé</p>
+				<p>Réseau centralisé</p>
 			</div>
 
 		</div>
