--- a/documentation.html
+++ b/documentation.html
@@ -52,7 +52,7 @@
 			<div class = "box">
 				<span></span>
 				<div class = "content">
-					<h2>Les Faille 0d</h2>
+					<h2>Les Failles 0d</h2>
 					<p2>Que sont les attaques zero-day et comment fonctionnent-elles ?</p2>
 				</br>
 					<a href="documentation/f0d.html">Lire plus</a>
