--- a/accueil.html
+++ b/accueil.html
@@ -15,7 +15,7 @@
 <body>
 
 	<header class="header">
-		<img class="header-title" src="resources/images/logo/logo-black-bold-bg.png" width="30" style="border-radius: 15px">
+		<img class="header-title header-logo" src="resources/images/logo/logo-black-bold-bg.png" width="30" style="border-radius: 5rem">
 		<p class="header-title">WallHack - Accueil</p>
 	</header>
 	<div class="transition transition is-active"></div>
@@ -24,7 +24,7 @@
 		<ul class="navbar-menu">
 			<li class="navbar-item">
 				<div class="navbar-link navbar-title">Menu</div>
-				<i class="fas fa-chevron-right navbar-icon fa-lg logo"></i>
+				<div id="nav-title"><div class="nav-title"<i class="fas fa-chevron-right navbar-icon fa-lg logo"></i></div></div>
 			</li>
 			<li class="navbar-item">
 				<a href="accueil.html" class="fas fa-home fa-lg navbar-icon"></a>
