--- a/documentation/f0d.html
+++ b/documentation/f0d.html
@@ -202,7 +202,7 @@
 		<ul class="navbar-menu">
 			<li class="navbar-item">
 				<a class="navbar-link navbar-title">Menu</a>
-				<div class="nav-title"<i class="fas fa-chevron-right navbar-icon fa-lg logo"></i></div>
+				<div class="nav-title"><i class="fas fa-chevron-right navbar-icon fa-lg logo"></i></div>
 			</li>
 			<li class="navbar-item">
 				<i class="fas fa-home fa-lg navbar-icon"></i>
