--- a/documentation/ddos.html
+++ b/documentation/ddos.html
@@ -24,7 +24,7 @@
 		<ul class="navbar-menu">
 			<li class="navbar-item">
 				<div class="navbar-link navbar-title">Menu</div>
-				<div class="nav-title"<i class="fas fa-chevron-right navbar-icon fa-lg logo"></i></div>
+				<div class="nav-title"><i class="fas fa-chevron-right navbar-icon fa-lg logo"></i></div>
 			</li>
 			<li class="navbar-item">
 				<a href="../accueil.html" class="fas fa-home fa-lg navbar-icon"></a>
